--- a/index.html
+++ b/index.html
@@ -227,6 +227,11 @@
             display: block;
         }
 
+        /* Content wrapper to contain page content */
+        .content-wrapper {
+            min-height: calc(100vh - 300px);
+        }
+
         /* Dashboard Cards */
         .dashboard-card {
             padding: 1.5rem;
